# waydisplay

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml
cmake/: WayDisplayBuildProfiles.cmake  WayDisplayDependencies.cmake  WayDisplayInstall.cmake  WayDisplayOptions.cmake  WayDisplaySummary.cmake  WayDisplayTargets.cmake  WayDisplayTests.cmake  WayDisplayWarnings.cmake
docs/: architecture.md  command-line.md  protocol.md  threading.md
include/waydisplay/: wd_audio_transport.h  wd_config.h  wd_eventfd.h  wd_input.h  wd_io_uring.h  wd_log.h  wd_media_clock.h  wd_net.h  wd_protocol.h  wd_protocol_codec.h  wd_protocol_dispatch.h  wd_selection.h  wd_tile.h  wd_time.h  wd_zstd.h
src/client/: audio_playback.cpp  audio_playback.hpp  audio_playback_clock.hpp  audio_video_sync.c  audio_video_sync.cpp  audio_video_sync.h  audio_video_sync.hpp  client_async_tcp.cpp  client_async_tcp.hpp  client_async_udp.cpp  client_async_udp.hpp  client_cli.cpp  client_cli.hpp  client_config_validation.cpp  client_config_validation.hpp  client_net.cpp  client_net.hpp  client_receive.cpp  client_receive.hpp  client_session.c  client_session.h  client_state.hpp  client_telemetry.cpp  client_telemetry.hpp  client_transport.cpp  client_transport.hpp  content_order.cpp  content_order.hpp  main_sdl.cpp  present_telemetry.cpp  present_telemetry.hpp  render_planning.cpp  render_planning.hpp  render_wakeup.cpp  render_wakeup.hpp  sdl_input.cpp  sdl_input.hpp  sdl_viewer.cpp  sdl_viewer.hpp  selection_sync.cpp  (+22 more)
src/common/: wd_eventfd.c  wd_io_uring.c  wd_log.c  wd_net.c  wd_protocol_codec.c  wd_protocol_dispatch.c  wd_selection.c  wd_tile.c  wd_time.c  wd_vaapi_device.h  wd_zstd.c
src/server/: main_wlroots.c  wd_async_tcp.c  wd_async_tcp.h  wd_async_udp.c  wd_async_udp.h  wd_async_udp_accounting.c  wd_async_udp_accounting.h  wd_audio_capture.c  wd_audio_capture.h  wd_audio_encoder.c  wd_audio_encoder.h  wd_audio_packetizer.c  wd_audio_packetizer.h  wd_audio_ring.c  wd_audio_ring.h  wd_audio_routing.c  wd_audio_routing.h  wd_audio_stream.c  wd_audio_stream.h  wd_bandwidth_plan.c  wd_bandwidth_plan.h  wd_channel_binding.c  wd_channel_binding.h  wd_clipboard.c  wd_connection_identity.c  wd_connection_identity.h  wd_cursor.c  wd_dirty_region_scheduler.c  wd_dirty_region_scheduler.h  wd_frame_pacing.c  wd_frame_pacing.h  wd_input_correlation.c  wd_input_correlation.h  wd_keyboard.c  wd_keyboard_shortcuts_inhibit.c  wd_net_listener.c  wd_net_listener.h  wd_net_run_state.h  wd_pointer.c  wd_process.c  (+42 more)
tests/: fuzz_tile_protocol.cpp  fuzz_tile_reassembly.cpp  test_async_sender_shutdown.c  test_async_udp_accounting.cpp  test_audio_ring.cpp  test_audio_routing.cpp  test_audio_startup_integration.cpp  test_audio_transition_stress.cpp  test_audio_transport.cpp  test_audio_video_sync.cpp  test_bandwidth_plan.cpp  test_client_async_sender_shutdown.cpp  test_client_cli.cpp  test_client_config.cpp  test_client_config_matrix.cpp  test_client_runtime_linkage.cpp  test_client_session.c  test_clipboard_sync_lifecycle.cpp  test_control_handshake_runtime.cpp  test_cpp20_branch_hints.cpp  test_dirty_region_scheduler.cpp  test_eventfd_wakeup.c  test_frame_pacing.c  test_loopback_runtime.cpp  test_net_listener.c  test_net_run_state.c  test_planned_resize_resume.cpp  test_process_spawn.c  test_protocol_descriptor_matrix.cpp  test_protocol_fuzz.cpp  test_readback_regions.c  test_reconnect_render_lifecycle.cpp  test_recovery_policy_edges.cpp  test_render_decisions.cpp  test_render_planning.cpp  test_resize_video_continuity.cpp  test_scene_policy.cpp  test_selection_capture.cpp  test_selection_delivery.cpp  test_selection_protocol.cpp  (+26 more)
tests/cmake/: check_build_profiles.cmake  check_codec_test_gating.cmake  check_config_tunable_contracts.cmake  check_io_uring_5_14_contract.cmake  check_runtime_target_gating.cmake  check_threaded_runtime_contracts.cmake  check_wlroots_scene_test_gating.cmake
tests/fixtures/: README.md  video_delayed_64x48.h264  video_delayed_64x48.h264.manifest  video_delayed_64x48.h265  video_delayed_64x48.h265.manifest  video_keyframe_128x128.h264  video_keyframe_128x128.h265  video_keyframe_64x48.h264  video_keyframe_64x48.h265
